--- a/BFF/CommitLogFrontend/package.json
+++ b/BFF/CommitLogFrontend/package.json
@@ -10,11 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-router": "^1.143.11",
+    "@tanstack/react-router-devtools": "^1.143.11",
+    "axios": "^1.13.2",
+    "immer": "^11.1.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.69.0",
+    "react-hot-toast": "^2.6.0",
+    "tailwindcss": "^4.1.18",
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tanstack/router-plugin": "^1.143.11",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
