feat(auth): add basic frontend login with BFF
- Add a script to copy the build output of the react app to the wwwroot for serving
- Add basic login flow with BFF to protect routes

--- a/BFF/CommitLogBFF/appsettings.json
+++ b/BFF/CommitLogBFF/appsettings.json
@@ -7,11 +7,10 @@
   },
   "AllowedHosts": "*",
   "BFF": {
-    "Authority": "https://localhost:5100",
-    "ClientId": "bff-secret",
-    "ClientSecret": "secret",
-    "Scopes": [ "openid", "profile", "offline_access" ],
-
+    "Authority": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "Scopes": [],
     "Apis": [
       {
         "PathMatch": "/api",
