--- a/BFF/CommitLogBFF/appsettings.Development.json
+++ b/BFF/CommitLogBFF/appsettings.Development.json
@@ -5,14 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
+  "AllowedHosts": "*",
   "BFF": {
-    "Authority": "https://demo.duendesoftware.com",
-    "ClientId": "interactive.confidential",
+    "Authority": "https://localhost:5001",
+    "ClientId": "bff-client",
     "ClientSecret": "secret",
-
-    "Scopes": [ "openid", "profile", "api", "offline_access" ],
-
+    "Scopes": [ "openid", "profile", "offline_access" ],
     "Apis": [
       {
         "PathMatch": "/api",
